# platformio2nix

./: .envrc  .gitignore  .rustfmt.toml  Cargo.toml  README.md  flake.nix  package.nix  setup-hook.nix  treefmt.nix
.github/workflows/: check.yml
cli/: .rustfmt.toml  Cargo.toml
cli/src/: lockfile.rs  main.rs  manifest.rs
cli/src/registry/: mod.rs
cli/src/registry/test/: README.md  platform-atmelavr.json  simplefoc.json
dev/: flake-module.nix  flake.nix  treefmt.nix
examples/: .gitignore  mkChecks.nix
examples/external-deps/: flake.nix  package.nix  platformio.ini
examples/external-deps/src/: main.cpp
examples/marlin/: flake.nix  package.nix
examples/multi-env/: flake.nix  package.nix  platformio.ini
examples/multi-env/src/: main.cpp
examples/simplefoc/: flake.nix  package.nix  platformio.ini
examples/simplefoc/src/: main.cpp
nix/: setup-hook.nix
nix/test/marlin/: flake.nix  package.nix
nix/test/url-deps/: package.nix  platformio.ini
src/: lockfile.rs  main.rs  manifest.rs  output.rs
src/registry/: mod.rs
src/registry/test/: search.json  toolchain-atmelavr.json
