[package]
name = "platformio2nix"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
clap_derive = "4.5.8"
color-eyre = "0.6.3"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_path_to_error = "0.1.16"
url = { version = "2.5.2", features = ["serde"] }
