[package]
name = "platformio2nix"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.8", features = ["derive"] }
clap_derive = "4.5.8"
color-eyre = "0.6.3"
hex = { version = "0.4.3", features = ["serde"] }
homedir = "0.3.3"
http-cache-reqwest = "0.14.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
reqwest-middleware = "0.3.2"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_path_to_error = "0.1.16"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.2", features = ["serde"] }
xdg = "2.5.2"
