[package]
name = "platformio2nix"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.8", features = ["derive"] }
clap_derive = "4.5.8"
color-eyre = "0.6.3"
hex = { version = "0.4.3", features = ["serde"] }
http-cache-reqwest = "0.15.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
reqwest-middleware = "0.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_path_to_error = "0.1.16"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.2", features = ["serde"] }
xdg = "2.5.2"
